services/application/apps/product/k8s/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: PRODUCT_SERVICE_ECR_REPO:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3005
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: ELB_URL
      http:
        paths:
          - backend:
              service:
                name: product-service
                port:
                  number: 80
            path: /TENANT_PATH/api/products
            pathType: Prefix
